--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,8 @@ androidx-navigation = "2.7.5"
 hilt = "2.44"
 hiltExt = "1.1.0"
 
+gson= "2.8.9"
+
 junit = "4.13.2"
 androidx-test = "1.5.0"
 androidx-test-ext-junit = "1.1.5"
@@ -63,6 +65,8 @@ hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt"
 hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 hilt-ext-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltExt" }
+
+google-gson = { module = "com.google.code.gson:gson", version.ref = "gson"}
 
 junit = { module = "junit:junit", version.ref = "junit" }
 androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test" }
