--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ kotlin = "1.8.10"
 compileSdk = "34"
 minSdk = "24"
 targetSdk = "34"
+accompanist = "0.32.0"
 compose-compiler = "1.4.3"
 androidx-compose-bom = "2023.10.01"
 androidxHiltNavigationCompose = "1.1.0"
@@ -30,6 +31,8 @@ androidx-test-espresso = "3.5.1"
 
 [libraries]
 androidx-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "ktx"}
+
+accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
 
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "androidx-compose-bom" }
 androidx-compose-animation = { module = "androidx.compose.animation:animation" }
